--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^2.1.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^9.0.0",
@@ -28,10 +29,13 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^10.0.0",
     "bcrypt": "^5.1.0",
+    "cache-manager": "^5.2.3",
+    "cache-manager-redis-store": "^3.0.1",
     "compression": "^1.7.4",
     "helmet": "^7.0.0",
     "mysql2": "^3.5.2",
     "pg": "^8.11.2",
+    "redis": "^4.6.7",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
